<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.CreateBox">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="117dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="117dp"
        android:text="@string/box_making"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/backButtonCreateBoxAct"
        android:layout_width="103dp"
        android:layout_height="42dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="8dp"
        android:background="#00FFFFFF"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back_button"
        tools:ignore="TouchTargetSizeCheck" />

    <RadioGroup
        android:id="@+id/radioGroupCreateBoxAct"
        android:layout_width="399dp"
        android:layout_height="110dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <RadioButton
            android:id="@+id/radioButtonConnectToBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/connect_to_box" />

        <RadioButton
            android:id="@+id/radioButtonCreateBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_box" />

    </RadioGroup>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/createBoxInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="3dp"
        android:hint="@string/choose_action"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupCreateBoxAct" />

    <Button
        android:id="@+id/createBoxButtonCreateBoxAct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:text="@string/go"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createBoxInput" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="425dp"
        android:layout_height="770dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/santa_in_box" />

</androidx.constraintlayout.widget.ConstraintLayout>